# flowstick

./: .gitignore  README.md
firmware/apa102-factory-test/: Cargo.toml
firmware/flowstick/: Cargo.toml  build.rs
firmware/flowstick/src/: test.data
flowstick_junction_pcb/: flowstick_junction_pcb.kicad_pcb  flowstick_junction_pcb.kicad_prl  flowstick_junction_pcb.kicad_pro  flowstick_junction_pcb.kicad_sch  fp-info-cache
flowstick_junction_pcb/custom.pretty/: quad_b2b_pad.kicad_mod  single_b2b_pad.kicad_mod
flowstick_junction_pcb/gerbers/: flowstick_junction_pcb-B_Cu.gbr  flowstick_junction_pcb-B_Mask.gbr  flowstick_junction_pcb-B_Silkscreen.gbr  flowstick_junction_pcb-Edge_Cuts.gbr  flowstick_junction_pcb-F_Cu.gbr  flowstick_junction_pcb-F_Mask.gbr  flowstick_junction_pcb-F_Silkscreen.gbr  flowstick_junction_pcb-In1_Cu.gbr  flowstick_junction_pcb-In2_Cu.gbr  flowstick_junction_pcb-NPTH.drl  flowstick_junction_pcb-PTH.drl  flowstick_junction_pcb-job.gbrjob
flowstick_led_strip_pcbs/: flowstick_led_strip_panel.kicad_prl  flowstick_led_strip_panel.kicad_pro  flowstick_led_strip_panel_6p.kicad_prl  flowstick_led_strip_panel_6p.kicad_pro  flowstick_led_strip_pcbs.kicad_pcb  flowstick_led_strip_pcbs.kicad_prl  flowstick_led_strip_pcbs.kicad_pro  flowstick_led_strip_pcbs.kicad_sch  fp-info-cache  strip.kicad_sch
flowstick_led_strip_pcbs/custom.pretty/: LED-APA102-2020-6.kicad_mod  LED-APA102-2020-6_90deg.kicad_mod  mousebite_5.kicad_mod  mousebite_mini3.kicad_mod  quad_b2b_pad.kicad_mod
flowstick_led_strip_pcbs/gerbers/: bom.csv  flowstick_led_strip_panel-B_Cu.gbr  flowstick_led_strip_panel-B_Mask.gbr  flowstick_led_strip_panel-B_Paste.gbr  flowstick_led_strip_panel-B_Silkscreen.gbr  flowstick_led_strip_panel-Edge_Cuts.gbr  flowstick_led_strip_panel-F_Cu.gbr  flowstick_led_strip_panel-F_Mask.gbr  flowstick_led_strip_panel-F_Paste.gbr  flowstick_led_strip_panel-F_Silkscreen.gbr  flowstick_led_strip_panel-NPTH.drl  flowstick_led_strip_panel-PTH.drl  flowstick_led_strip_panel-all-pos.csv  flowstick_led_strip_panel-bottom-pos.csv  flowstick_led_strip_panel-job.gbrjob  flowstick_led_strip_panel-top-pos.csv  flowstick_led_strip_panel-top.pos  flowstick_led_strip_pcbs-B_Cu.gbr  flowstick_led_strip_pcbs-B_Mask.gbr  flowstick_led_strip_pcbs-B_Paste.gbr  flowstick_led_strip_pcbs-B_Silkscreen.gbr  flowstick_led_strip_pcbs-Edge_Cuts.gbr  flowstick_led_strip_pcbs-F_Cu.gbr  flowstick_led_strip_pcbs-F_Mask.gbr  flowstick_led_strip_pcbs-F_Paste.gbr  flowstick_led_strip_pcbs-F_Silkscreen.gbr  flowstick_led_strip_pcbs-NPTH.drl  flowstick_led_strip_pcbs-PTH.drl  flowstick_led_strip_pcbs-job.gbrjob  function_test.txt
flowstick_led_strip_pcbs/gerbers_6p/: flowstick_led_strip_panel_6p-B_Cu.gbr  flowstick_led_strip_panel_6p-B_Mask.gbr  flowstick_led_strip_panel_6p-B_Paste.gbr  flowstick_led_strip_panel_6p-B_Silkscreen.gbr  flowstick_led_strip_panel_6p-Edge_Cuts.gbr  flowstick_led_strip_panel_6p-F_Cu.gbr  flowstick_led_strip_panel_6p-F_Mask.gbr  flowstick_led_strip_panel_6p-F_Paste.gbr  flowstick_led_strip_panel_6p-F_Silkscreen.gbr  flowstick_led_strip_panel_6p-NPTH.drl  flowstick_led_strip_panel_6p-PTH.drl  flowstick_led_strip_panel_6p-job.gbrjob
flowstick_main_panel/: flowstick_main_panel.kicad_pcb  flowstick_main_panel.kicad_prl  flowstick_main_panel.kicad_pro  fp-info-cache  ~flowstick_main_panel.kicad_pcb.lck
flowstick_main_panel/custom.pretty/: mousebite_mini4.kicad_mod  single_b2b_pad.kicad_mod  single_b2b_pad_doublewide.kicad_mod
flowstick_main_panel/gerbers/: bom.csv  flowstick_main_panel-B_Cu.gbr  flowstick_main_panel-B_Mask.gbr  flowstick_main_panel-B_Paste.gbr  flowstick_main_panel-B_Silkscreen.gbr  flowstick_main_panel-Edge_Cuts.gbr  flowstick_main_panel-F_Cu.gbr  flowstick_main_panel-F_Mask.gbr  flowstick_main_panel-F_Paste.gbr  flowstick_main_panel-F_Silkscreen.gbr  flowstick_main_panel-In1_Cu.gbr  flowstick_main_panel-In2_Cu.gbr  flowstick_main_panel-NPTH.drl  flowstick_main_panel-PTH.drl  flowstick_main_panel-all-pos.csv  flowstick_main_panel-job.gbrjob
flowstick_main_pcb/: custom.bak  custom.kicad_sym  flowstick_main_pcb.csv  flowstick_main_pcb.kicad_pcb  flowstick_main_pcb.kicad_prl  flowstick_main_pcb.kicad_pro  flowstick_main_pcb.kicad_sch  fp-info-cache  links
flowstick_main_pcb/custom.pretty/: Untitled.kicad_mod
flowstick_main_pcb/gerbers/: flowstick_main_pcb-B_Cu.gbr  flowstick_main_pcb-B_Mask.gbr  flowstick_main_pcb-B_Paste.gbr  flowstick_main_pcb-B_Silkscreen.gbr  flowstick_main_pcb-Edge_Cuts.gbr  flowstick_main_pcb-F_Cu.gbr  flowstick_main_pcb-F_Mask.gbr  flowstick_main_pcb-F_Paste.gbr  flowstick_main_pcb-F_Silkscreen.gbr  flowstick_main_pcb-In1_Cu.gbr  flowstick_main_pcb-In2_Cu.gbr  flowstick_main_pcb-NPTH.drl  flowstick_main_pcb-PTH.drl  flowstick_main_pcb-job.gbrjob
flowstick_spacer_pcbs/: flowstick_spacer_pcbs.kicad_pcb  flowstick_spacer_pcbs.kicad_prl  flowstick_spacer_pcbs.kicad_pro  flowstick_spacer_pcbs.kicad_sch  fp-info-cache
flowstick_spacer_pcbs/custom.pretty/: single_b2b_pad.kicad_mod  spacer_mechanical_attachment.kicad_mod
flowstick_spacer_pcbs/gerbers/: flowstick_spacer_pcbs-Edge_Cuts.gbr  flowstick_spacer_pcbs-NPTH.drl  flowstick_spacer_pcbs-PTH.drl  flowstick_spacer_pcbs-job.gbrjob
mobile/flowstick/: README.md  pubspec.yaml
mobile/flowstick/android/app/: build.gradle.kts
mobile/flowstick/android/app/src/main/: AndroidManifest.xml
mobile/flowstick/ios/Runner/: Info.plist
mobile/flowstick/ios/Runner.xcodeproj/: project.pbxproj
mobile/flowstick/lib/: main.dart  main.dart.old  main.dart_old  state.dart  state.freezed.dart
mobile/flowstick/linux/: CMakeLists.txt
mobile/flowstick/linux/runner/: my_application.cc
mobile/flowstick/macos/Runner.xcodeproj/: project.pbxproj
mobile/flowstick/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/flowstick/macos/Runner/Configs/: AppInfo.xcconfig
mobile/flowstick/test/: widget_test.dart
mobile/flowstick/web/: index.html  manifest.json
mobile/flowstick/windows/: CMakeLists.txt
mobile/flowstick/windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
